# data_viz_guidelines

./: .gitignore  README.md  mkdocs.yml  observablehq.config.js  package-lock.json  package.json  pyproject.toml
docs/: index.md  publishing-checklist.md  quick-intro.md
docs/docs/guidelines/: accessibility.md  chart-selection.md  design-process.md  principles.md
docs/docs/javascripts/: extra.js
docs/docs/style-guide/: typography.md
docs/docs/stylesheets/: extra.css
docs/guidelines/: accessibility.md  interactivity.md
docs/style-guide/: colour-palette.md  layout.md
docs/stylesheets/: extra.css
legacy/: observablehq.config.js  package-lock.json
legacy/src/: index.md  principles.md  quick-intro.md  style-guide-accessibility.md  style-guide-typography.md
legacy/src/.observablehq/cache/: _build.json
legacy/src/.observablehq/cache/_observablehq/: client.js
legacy/src/components/: colours.js
legacy/src/styles/: styles.css
src/: checklist.md  choose-chart.md  design-process.md  index.md  principles.md  quick-intro.md  style-guide-accessibility.md  style-guide-colour.md  style-guide-interactivity.md  style-guide-layout.md  style-guide-typography.md
src/.observablehq/: deploy.json
src/.observablehq/cache/: _build.json
src/.observablehq/cache/_npm/@one-data/observable-themes@0.1.0/: footer.js  header.js
src/.observablehq/cache/_npm/@one-data/observable-themes@0.1.0/styles/: base.css  (+9 more)
src/.observablehq/cache/_npm/canvas-confetti@1.9.3/: _esm.js
src/.observablehq/cache/data/: launches.csv
src/components/: colours.js
src/styles/: styles.css
