[project]
name = "data-viz-guidelines"
version = "0.1.0"
description = "Data Visualisation guidelines"
authors = [
    {name = "Luca Picci",email = "lpicci96@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mkdocs-material (>=9.6.14,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
